//version: 1707058017

plugins {
    id 'com.gtnewhorizons.gtnhconvention'
    id 'idea'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(8))
    }
}

version = "1.10.2"
group= "kamkeel.customnpc-plus"
archivesBaseName = "CustomNPC-Plus"

def embedMixin = !project.hasProperty("nomixin");
if(!embedMixin){
    version += "-nomixin"
}

// API Task
tasks.create('updateAPI', Exec) {
    description 'Updates (and Inits) git submodules'
    commandLine 'git', 'submodule', 'update', '--init', '--recursive'
    group 'CustomNPC+'
}

// No Mixin Build Task
tasks.create('buildNoMixin', Exec) {
    description 'Builds mod without embed'
    group 'CustomNPC+'
    commandLine 'build', '-Pnomixin'
}

sourceSets {
    named("main").configure {
        java {
            srcDirs += ['src/api/java']
        }
    }
}

// Modify the existing 'build' task to depend on 'updateAPI'
//tasks.apiClasses.dependsOn 'updateAPI'
